findings v3 implemented
